# gaphor-mbse-methodology-plugin

./: pyproject.toml
gaphor_mbse_methodology_plugin/: __init__.py
