[project]
name = "gaphor-mbse-methodology-plugin"
version = "0.1.0"
description = "A plugin implementing some MBSE Methodology automations"
authors = [
    {name = "Frank Vanbever",email = "frank.vanbever@mind.be"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."gaphor.services"]
"mbse-methodology" = "gaphor_mbse_methodology_plugin:MBSEMethodology"
